src/ui/snapshots/state/cleanup/branch_selection/empty.snap
---
source: src/ui/state/cleanup/branch_selection.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│             Cleanup Mode - Select Branches to Delete (0 selected)            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Branches──────────────────────────────────────────────────────────────────────┐"
"│    Branch                         Target         Version       Status        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│↑/↓: Navigate  Space: Toggle selection  a: Select all merged                  │"
"│d: Deselect all  Enter: Proceed to cleanup  q: Exit                           │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
