src/ui/snapshots/state/cleanup/branch_selection/with_branches.snap
---
source: src/ui/state/cleanup/branch_selection.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                 Cleanup Mode - Select Branches to Delete (0 selected)                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Branches──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│      Branch                                                           Target          Version         Status         │"
"│                                                                                                                      │"
"│→ ☐   patch/main-6.6.2                                                 main            6.6.2           Merged         │"
"│  ☐   patch/next-6.6.1                                                 next            6.6.1           Merged         │"
"│  ☐   patch/main-6.6.0                                                 main            6.6.0           Not Merged     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│↑/↓: Navigate  Space: Toggle selection  a: Select all merged                                                          │"
"│d: Deselect all  Enter: Proceed to cleanup  q: Exit                                                                   │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
